--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-	<a href="https://github.com/Joeynoh/HTML5-Minesweeper"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+        <div id="entryscreen"><h1 class="blink">Natalia Pires</h1></div>
+        <a href="https://github.com/Joeynoh/HTML5-Minesweeper"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
 	<div class="container">
 		<header class="row">
